--- a/FRONTEND/src/Components/Navbar.module.css
+++ b/FRONTEND/src/Components/Navbar.module.css
@@ -76,7 +76,7 @@
   cursor: pointer;
   padding: 8px 16px;
   color: white;
-  border-radius: 9999px;
+  border-radius: 50px;
   font-size: 14px;
 }
 
@@ -88,7 +88,8 @@
   font-size: 28px;
   color: #333;
   text-decoration: none;
-  padding: 3px; 
+  padding: 3px;
+  position: relative;
 }
 
 .carrito:hover {
@@ -97,4 +98,32 @@
 
 .carrito svg {
   vertical-align: middle;
+}
+
+.navbarSearch {
+  display: flex;
+  margin-left: 0.5rem;
+  position: relative;
+}
+
+.searchButton {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1.5rem;
+  color: #333;
+  margin: 0;
+}
+
+.searchInput {
+  border: 2px solid #ccc;
+  padding: 0.5rem 2.5rem 0.5rem 0.5rem; 
+  border-radius: 50px;
+  outline: none;
+  transition: all 0.3s ease;
+}
+
+.searchInput:focus {
+  border-color: #007bff; 
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.727); /* Agrega una sombra al enfocar */
 }
