--- a/FRONTEND/src/Components/Navbar.module.css
+++ b/FRONTEND/src/Components/Navbar.module.css
@@ -88,7 +88,7 @@
   font-size: 28px;
   color: #333;
   text-decoration: none;
-  padding: 3px;
+  margin: 0px 30px 0px 23px;
   position: relative;
 }
 
