--- a/FRONTEND/src/Components/AuthForm/AuthForm.module.css
+++ b/FRONTEND/src/Components/AuthForm/AuthForm.module.css
@@ -18,7 +18,7 @@
   border-radius: 25px;
   position: relative;
   overflow: hidden;
-  width: 768px;
+  width: 868px;
   max-width: 100%;
   min-height: 500px;
   box-shadow: 0 14px 28px rgb(189, 214, 127), 0 10px 10px rgb(159, 172, 127);
@@ -103,6 +103,18 @@
   transition: transform 80ms ease-in;
   margin: 10px;
   position: relative;
+}
+
+.link {
+  color: #7e6044;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 1em; 
+  margin-top: 10px; 
+}
+
+.link:hover {
+  text-decoration: underline;
 }
 
 .button:active {
@@ -220,7 +232,7 @@
 }
 
 .title {
-  font-size: 50px;
+  font-size: 40px;
   line-height: 45px;
   margin: 0;
   margin-bottom: 10px;
@@ -228,7 +240,7 @@
 }
 
 .title2 {
-  font-size: 20px;
+  font-size: 15px;
   color: #131313;
 }
 
