Funcion Api business: Se implemento y mejoro UI/UX de (Cart, OwnerEarnings y PurchaseHistory) también se agrego botones para acceder a ello

--- a/FRONTEND/src/Components/Home/ExplorarLibros/LibrosGrid.module.css
+++ b/FRONTEND/src/Components/Home/ExplorarLibros/LibrosGrid.module.css
@@ -1,6 +1,6 @@
 .container {
     padding: 2rem 4%;
-    background-color: #141414;
+    margin: 5rem auto;
     color: white;
     min-height: 100vh;
     font-family: 'Helvetica Neue', Arial, sans-serif;
