--- a/FRONTEND/src/Components/Profile/ChangesProfile/ChangeProfileForm.module.css
+++ b/FRONTEND/src/Components/Profile/ChangesProfile/ChangeProfileForm.module.css
@@ -30,7 +30,7 @@
 }
 
 .title {
-  color: var(--accent-color);
+  color: var(--primary-color);
   font-size: 1.75rem;
   font-weight: 600;
   margin: 0;
@@ -49,13 +49,13 @@
 .headerIcon {
   width: 1.5rem;
   height: 1.5rem;
-  color: var(--accent-color);
+  color: var(--primary-color);
 }
 
 .sectionIcon {
   width: 1.25rem;
   height: 1.25rem;
-  color: var(--accent-color);
+  color: var(--primary-color);
 }
 
 .alertIcon {
@@ -74,7 +74,6 @@
 .tabButton {
   padding: 0.75rem 1rem;
   border-radius: 0.5rem;
-  color: var(--accent-color);
   font-weight: 500;
   border: 1px solid rgba(245, 158, 11, 0.2);
   cursor: pointer;
@@ -88,17 +87,17 @@
 }
 
 .tabIcon {
-  color: var(--accent-color);
+  color: var(--primary-color);
 }
 
 .tabButton:hover {
-  background-color: rgba(245, 158, 11, 0.05);
+  background-color: rgba(136, 136, 136, 0.493);
 }
 
 .activeTab {
-  background-color: var(--accent-color);
+  background-color: var(--primary-color);
   color: var(--text-light);
-  border-color: var(--accent-color);
+  border-color: var(--primary-color);
   box-shadow: var(--shadow-md);
 }
 
@@ -131,7 +130,7 @@
 }
 
 .sectionTitle {
-  color: var(--accent-color);
+  color: var(--primary-color);
   font-size: 1.5rem;
   font-weight: 500;
   margin: 0;
@@ -171,7 +170,7 @@
 }
 
 .inputIcon {
-  color: var(--accent-color);
+  color: var(--primary-color);
 }
 
 .input,
@@ -183,7 +182,7 @@
   font-size: 1rem;
   transition: all var(--transition-fast);
   background-color: var(--bg-cream-dark);
-  color: var(--text-primary);
+  color: white;
   height: auto;
 }
 
@@ -243,7 +242,7 @@
   align-items: center;
   justify-content: center;
   padding: 0.8rem 1.75rem;
-  background-color: var(--accent-color);
+  background-color: var(--primary-color);
   color: var(--text-light);
   font-weight: 500;
   border-radius: 0.5rem;
